--- a/src/main/resources/templates/fragments/guideAsideFragment.html
+++ b/src/main/resources/templates/fragments/guideAsideFragment.html
@@ -98,6 +98,19 @@
 						</a></li>
 					</ul></li>
 			</ul>
+
+			<ul class="sidebar-nav" id="def-nav">
+				<li class="nav-item"><a class="nav-link collapsed"
+										data-bs-target="#tasks-def-nav" data-bs-toggle="collapse"
+										href="#"> <i class="bi bi-menu-button-wide"></i><span>Task Assignment</span><i class="bi bi-chevron-down ms-auto"></i>
+				</a>
+					<ul id="tasks-def-nav" class="nav-content collapse "
+						data-bs-parent="#guide-nav">
+						<li><a th:href="@{/bisag/guide/tasks_assignments}">
+							<i class="bi bi-circle"></i><span>Task Management</span>
+						</a></li>
+					</ul></li>
+			</ul>
 			<!-- Vendor JS Files --> <script
 					th:src="@{/assets/vendor/apexcharts/apexcharts.min.js}"></script> <script
 					th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
