--- a/src/main/resources/templates/intern/submit_forms.html
+++ b/src/main/resources/templates/intern/submit_forms.html
@@ -222,6 +222,30 @@
                                                                      required>
                                         </div>
                                     </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group mt-3">
+                                            <label for="projectDefinitionForm" class="form-label">Project Definition
+                                                Form:</label> <input type="file" class="form-control"
+                                                                     id="projectDefinitionForm" name="projectDefinitionForm" accept=".pdf"
+                                                                     required>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                    <div class="form-group mt-3">
+                                        <label for="extraForm" class="form-label">Extra
+                                            Form:</label> <input type="file" class="form-control"
+                                                                 id="extraForm" name="extraForm" accept=".pdf"
+                                                                 required>
+                                    </div>
+                                </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group mt-3">
+                                            <label for="extraForm2" class="form-label">Extra
+                                                Form 2:</label> <input type="file" class="form-control"
+                                                                     id="extraForm2" name="extraForm2" accept=".pdf"
+                                                                     required>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
